Better messages to handle the different Java versions